# CleaningRobot

./: .gitignore  .gitmodules  LICENSE  NaviClean.Dockerfile  README.md  cleaning_robot.Dockerfile  docker-compose-extra.yml  docker-compose.yml
DockerFiles/: Controller.Dockerfile  RealSense.Dockerfile  YDLidar.Dockerfile
cleaning_robot_coverage/: CMakeLists.txt  package.xml
cleaning_robot_description/: CMakeLists.txt  package.xml
cleaning_robot_gazebo/: CMakeLists.txt  package.xml
cleaning_robot_hardware/: CMakeLists.txt  package.xml
cleaning_robot_navigation/: CMakeLists.txt  package.xml
full_coverage_path_planner/: CMakeLists.txt
naviclean_bringup/: CMakeLists.txt  package.xml
naviclean_controller/: CMakeLists.txt  package.xml
naviclean_coverage/: CMakeLists.txt  package.xml
naviclean_coverage/config/: coverage_params.yaml
naviclean_coverage/include/: controller.hpp  coverage_planner.hpp  map_loader.hpp
naviclean_coverage/launch/: coverage_planner.launch.py
naviclean_coverage/naviclean_coverage/: follow_path.py
naviclean_coverage/src/: controller.cpp  coverage_planner.cpp  coverage_planner_node.cpp  map_loader.cpp
naviclean_description/: CMakeLists.txt  package.xml
naviclean_description/launch/: display.launch.py  gazebo.launch.py
naviclean_description/models/cafe/: model.config  model.sdf
naviclean_description/models/restaurant/: model.config  model.sdf
naviclean_description/urdf/: materials.xacro  naviclean.gazebo  naviclean.trans  naviclean.xacro  naviclean_ros2_control.xacro
naviclean_description/worlds/: cafe.world  cleaningtest_10x10.world  cleaningtest_5x5.world  my_world.world  my_world2.world  tejas.world  train.world
naviclean_firmware/: CMakeLists.txt  naviclean_interface.xml  package.xml
naviclean_mapping/: CMakeLists.txt  package.xml
naviclean_navigation/: CMakeLists.txt  package.xml
naviclean_utils/: package.xml  (+1 more)
(+93 files in other folders)
